# discord_analyst_bot

./: .env  .gitignore  Cargo.toml  README.md  data.json
migrations/: 20220206234505_initial_migration.sql
src/: main.rs
