[package]
name = "bot"
version = "0.1.0"
authors = ["ebljohn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.15.0", features = ["full"]}
console = "0.15.0"
futures = "0.3"
dialoguer = "0.9.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
comfy-table = "5.0.0"
itertools = "0.10.3"
serenity = {version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}